<resources>
    <string name="app_name">Control Relay</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="test_address">00:00:00:00:00:00</string>
    <string name="test_rssi_signal">-45 dBm</string>
    <string name="test_name_device">Name Device</string>
    <string name="location_permission_message">Для поиска устройств приложению необходим доступ к местоположению устройства.</string>
    <string name="sort_by_signal_text">Сортировать по сигналу</string>
    <string name="settings_text">Настройки</string>
    <string name="settings_title">Настройки</string>
    <string name="ok_button">OK</string>
    <string name="unnamed">Unnamed</string>
    <string name="device_settings">Настройки устройства</string>
    <string name="connection">Connection…</string>
    <string name="try_again">Еще раз</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="enter_password">Введите пароль</string>
    <string name="password_length_error">Пароль не должен быть короче 6 символов</string>
    <string name="change_password">Изменить пароль</string>
    <string name="change_name">Изменить имя</string>
    <string name="clear_saved_passwords">Очистить сохраненые пароли</string>
    <string name="enter_new_device_name">Введите новое имя устройства</string>
    <string name="name_cannot_be_empty_message">Имя не может быть пустым</string>
    <string name="name_short_message">Имя не должно быть короче 3-х символов</string>
    <string name="device_not_connected">Устройство не подключено!</string>
    <string name="enter_new_password">Новый пароль</string>
    <string name="enter_confirm_password">Подтвердите пароль</string>
    <string name="password_mismatch_error">Пароли не совпадают</string>
    <string name="password_change_error">Password change error!</string>
    <string name="error_changing_device_name">Ошибка смены имени устройства</string>
    <string name="reset_device_after_change_password">Устройство будет перезагружено после смены пароля.</string>
    <string name="reset_device_after_change_name">Устройство будет перезагружено после смены имени.</string>
    <string name="signal">%d dBm</string>
</resources>