<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_normal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_device_after_change_name"
        android:textColor="@color/text_info" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_marginTop="@dimen/margin_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_new_device_name"
        android:textAppearance="?textAppearanceSubtitle1" />

    <EditText
        android:id="@+id/editDeviceName"
        android:background="@drawable/drawable_round_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:inputType="text"
        android:maxLength="10"
        android:minLines="1" />

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_min"
        android:background="@android:color/transparent"
        android:text="@string/ok_button"
        android:textColor="@color/purple_500" />

</LinearLayout>