<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_normal">

    <TextView
        android:id="@+id/textInfo"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:text="@string/reset_device_after_change_password"
        android:textColor="@color/text_info" />

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="?textAppearanceSubtitle1" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/drawable_round_edit_text"
        android:inputType="numberPassword"
        android:maxLength="6"
        android:minLines="1"
        tools:ignore="TextFields" />

    <LinearLayout
        android:id="@+id/containerFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_min"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/textNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textAppearance="?textAppearanceSubtitle1" />

        <EditText
            android:id="@+id/editNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/drawable_round_edit_text"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:minLines="1"
            tools:ignore="TextFields" />

        <TextView
            android:id="@+id/textConfirmPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_min"
            android:text="@string/enter_confirm_password"
            android:textAppearance="?textAppearanceSubtitle1" />

        <EditText
            android:id="@+id/editConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@drawable/drawable_round_edit_text"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:minLines="1"
            tools:ignore="TextFields" />

    </LinearLayout>

    <Button
        android:id="@+id/okButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin_min"
        android:background="@android:color/transparent"
        android:text="@string/ok_button"
        android:textColor="@color/purple_500" />

</LinearLayout>